--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.4",
+    "nodemailer": "^7.0.6",
     "react": "^18",
     "react-bootstrap": "^1.6.1",
     "react-countup": "^6.5.3",
